--- a/index.html
+++ b/index.html
@@ -107,40 +107,68 @@
   const sheetId = '10W03bvKlVFlIUcxsHkzP_v_13gtnYRBmnrrO0ujB1bU';
   const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/`;
 
-  const diagonalsMap = {
-    '860': 86, '850': 85, '750': 75, '700': 70,
-    '650': 65, '580': 58, '575': 58, '550': 55,
-    '545': 55, '500': 50, '498': 50, '495': 50,
-    '490': 50, '438': 43, '435': 43, '430': 43,
-    '428': 43, '425': 43, '420': 43, '418': 43,
-    '415': 43, '398': 43, '395': 43, '390': 43,
-    '348': 32, '345': 32, '340': 32, '328': 32,
-    '325': 32, '320': 32, '318': 32, '315': 32,
-    '278': 27, '275': 27, '270': 27, '248': 24,
-    '245': 24, '240': 24, '238': 24, '235': 24,
+  // Сопоставление кода к диагонали
+  const diagonalMap = {
+    '860': 86,
+    '850': 85,
+    '750': 75,
+    '700': 70,
+    '650': 65,
+    '580': 58,
+    '575': 58,
+    '550': 55,
+    '545': 55,
+    '500': 50,
+    '498': 50,
+    '495': 50,
+    '490': 50,
+    '438': 43,
+    '435': 43,
+    '430': 43,
+    '428': 43,
+    '425': 43,
+    '420': 43,
+    '418': 43,
+    '415': 43,
+    '398': 43,
+    '395': 43,
+    '390': 43,
+    '348': 32,
+    '345': 32,
+    '340': 32,
+    '328': 32,
+    '325': 32,
+    '320': 32,
+    '318': 32,
+    '315': 32,
+    '278': 27,
+    '275': 27,
+    '270': 27,
+    '248': 24,
+    '245': 24,
+    '240': 24,
+    '238': 24,
+    '235': 24,
     '230': 24
   };
 
-  const diagonals = [86, 85, 75, 70, 65, 58, 55, 50, 43, 32, 27, 24];
-
+  // Список допустимых префиксов (первая часть серийника)
+  // Могут быть любые буквы, поэтому не ограничиваем, просто проверяем 3 буквы в начале
   function getDiagonal(serial) {
-    if (!serial) return null;
-    serial = serial.toUpperCase();
+    if (!serial || serial.length < 6) return null; // минимум 3 буквы + 3 цифры
 
-    // Серийный номер должен быть минимум 6 символов (3 буквы + 3 цифры)
-    if (serial.length < 6) return null;
-
+    // Проверим первые 3 символа — должны быть буквы
     const prefix = serial.slice(0, 3);
+    if (!/^[A-Z]{3}$/i.test(prefix)) return null;
+
+    // После первых 3 букв идут 3 цифры — это код диагонали
     const code = serial.slice(3, 6);
-
-    // Проверяем, что первые 3 символа — буквы (любые, не только GBV, TBV, JBV)
-    if (!/^[A-Z]{3}$/.test(prefix)) return null;
-
-    // Проверяем, что следующие 3 символа — цифры и есть в карте диагоналей
     if (!/^\d{3}$/.test(code)) return null;
 
-    const diagonal = diagonalsMap[code];
-    return diagonal || null;
+    if (diagonalMap.hasOwnProperty(code)) {
+      return diagonalMap[code];
+    }
+    return null;
   }
 
   async function getData(sheetName) {
@@ -209,47 +237,46 @@
     const thead = document.createElement('thead');
     const headerRow = document.createElement('tr');
 
-    // Первая ячейка с текстом "Name"
     const thName = document.createElement('th');
     thName.textContent = 'Name';
-    thName.style.backgroundColor = '#008080'; // единый цвет заголовка
     headerRow.appendChild(thName);
 
-    diagonals.forEach(d => {
+    diagonalsHeaders = Object.values(diagonalMap).filter((v, i, a) => a.indexOf(v) === i).sort((a,b) => b - a);
+
+    // Используем отсортированный массив диагоналей из diagonalMap
+    diagonalsHeaders.forEach(d => {
       const th = document.createElement('th');
       th.textContent = d;
-      th.style.backgroundColor = '#008080'; // единый цвет заголовка
       headerRow.appendChild(th);
     });
 
+    // Новые столбцы: Day и % per month
     const thDay = document.createElement('th');
     thDay.textContent = 'Day';
-    thDay.style.backgroundColor = '#008080';
     headerRow.appendChild(thDay);
 
     const thPercentPerMonth = document.createElement('th');
-    thPercentPerMonth.textContent = '% Per Month';
-    thPercentPerMonth.style.backgroundColor = '#008080';
+    thPercentPerMonth.textContent = '% per month';
     headerRow.appendChild(thPercentPerMonth);
 
-    // Итого
+    // Итоговый столбец Total
     const thTotalCol = document.createElement('th');
-    thTotalCol.textContent = 'Итого';
+    thTotalCol.textContent = 'Total';
     thTotalCol.classList.add('total-col');
     headerRow.appendChild(thTotalCol);
 
     thead.appendChild(headerRow);
     table.appendChild(thead);
 
+    // Подсчёт общей суммы по диагоналям
     const totalPerDiagonal = {};
-    diagonals.forEach(d => totalPerDiagonal[d] = 0);
+    diagonalsHeaders.forEach(d => totalPerDiagonal[d] = 0);
 
+    // Создаем тело таблицы
     const tbody = document.createElement('tbody');
 
     people.forEach(person => {
       const tr = document.createElement('tr');
-
-      // Имя
       const tdName = document.createElement('td');
       tdName.textContent = person;
       tr.appendChild(tdName);
@@ -257,7 +284,7 @@
       let totalPersonSum = 0;
       let totalDaysSet = new Set();
 
-      diagonals.forEach(d => {
+      diagonalsHeaders.forEach(d => {
         const td = document.createElement('td');
         if (stats[person][d]) {
           const s = stats[person][d];
@@ -270,7 +297,7 @@
             const percent = totalPerDiagonal[d] ? ((sumOKNDF / totalPerDiagonal[d]) * 100).toFixed(1) : '0.0';
             td.textContent = percent + '%';
           } else {
-            td.textContent = sumOKNDF; // показываем сумму OK и NDF
+            td.textContent = sumOKNDF;
           }
         } else {
           td.textContent = '-';
@@ -278,12 +305,12 @@
         tr.appendChild(td);
       });
 
-      // Day — количество уникальных дней для данного человека
+      // Столбец Day — количество уникальных дней
       const tdDay = document.createElement('td');
       tdDay.textContent = totalDaysSet.size;
       tr.appendChild(tdDay);
 
-      // % per month — отношение итога этого человека к сумме всех по диагоналям
+      // Столбец % per month — отношение итога этого человека к общей сумме всех
       const tdPercentPerMonth = document.createElement('td');
       const totalAll = Object.values(stats).reduce((acc, personStats) => {
         return acc + Object.values(personStats).reduce((acc2, diagStats) => acc2 + diagStats.OK + diagStats.NDF, 0);
@@ -291,10 +318,11 @@
       tdPercentPerMonth.textContent = totalAll ? ((totalPersonSum / totalAll) * 100).toFixed(1) + '%' : '0.0%';
       tr.appendChild(tdPercentPerMonth);
 
-      // Итого
+      // Итог (Total)
       const tdTotal = document.createElement('td');
       tdTotal.textContent = showPercent ? '' : totalPersonSum;
       tdTotal.classList.add('total-col');
+      tdTotal.setAttribute('title', 'Total');
       tr.appendChild(tdTotal);
 
       tbody.appendChild(tr);
@@ -302,16 +330,16 @@
 
     table.appendChild(tbody);
 
-    // Нижняя строка с суммами
+    // Нижняя строка с суммами — Total Repaired
     const tfoot = document.createElement('tfoot');
     const footerRow = document.createElement('tr');
 
     const footerNameCell = document.createElement('td');
-    footerNameCell.textContent = 'Итого';
+    footerNameCell.textContent = 'Total Repaired';
     footerNameCell.style.textAlign = 'left';
     footerRow.appendChild(footerNameCell);
 
-    diagonals.forEach(d => {
+    diagonalsHeaders.forEach(d => {
       const td = document.createElement('td');
       td.classList.add('total-col');
       if (showPercent) {
@@ -322,7 +350,7 @@
       footerRow.appendChild(td);
     });
 
-    // Пустые ячейки для Day и % per month в футере
+    // Пустые ячейки для Day и % per month
     const tdEmptyDay = document.createElement('td');
     tdEmptyDay.classList.add('total-col');
     footerRow.appendChild(tdEmptyDay);
@@ -331,10 +359,16 @@
     tdEmptyPercent.classList.add('total-col');
     footerRow.appendChild(tdEmptyPercent);
 
-    // Пустая ячейка справа для итого по людям
-    const emptyFooterCell = document.createElement('td');
-    emptyFooterCell.classList.add('total-col');
-    footerRow.appendChild(emptyFooterCell);
+    // Общая сумма всех диагоналей в последней ячейке
+    const tdGrandTotal = document.createElement('td');
+    tdGrandTotal.classList.add('total-col');
+    if (showPercent) {
+      tdGrandTotal.textContent = '';
+    } else {
+      const grandTotal = Object.values(totalPerDiagonal).reduce((a, b) => a + b, 0);
+      tdGrandTotal.textContent = grandTotal;
+    }
+    footerRow.appendChild(tdGrandTotal);
 
     tfoot.appendChild(footerRow);
     table.appendChild(tfoot);
@@ -342,54 +376,68 @@
     container.appendChild(table);
   }
 
-  function populateMonthSelect() {
+  function updateMonthOptions(data) {
     const select = document.getElementById('month-select');
-    const now = new Date();
-    const monthsToShow = 12;
+    const months = new Set();
 
-    for (let i = 0; i < monthsToShow; i++) {
-      const date = new Date(now.getFullYear(), now.getMonth() - i, 1);
-      const value = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}`;
-      const label = date.toLocaleDateString('pl-PL', { month: 'long', year: 'numeric' });
-      const capitalizedLabel = label.charAt(0).toUpperCase() + label.slice(1);
-      const option = new Option(capitalizedLabel, value);
+    data.forEach(row => {
+      if (row.date) {
+        const date = new Date(row.date);
+        if (!isNaN(date)) {
+          const key = `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, '0')}`;
+          months.add(key);
+        }
+      }
+    });
+
+    const sortedMonths = Array.from(months).sort().reverse();
+    select.innerHTML = '';
+    sortedMonths.forEach(month => {
+      const option = document.createElement('option');
+      option.value = month;
+      option.textContent = month;
       select.appendChild(option);
+    });
+  }
+
+  (async function initialize() {
+    const allData = await fetchData();
+    updateMonthOptions(allData);
+
+    let showPercent = false;
+
+    function updateTableForMonth(month) {
+      const filteredData = allData.filter(row => {
+        if (row.date) {
+          const date = new Date(row.date);
+          const key = `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, '0')}`;
+          return key === month;
+        }
+        return false;
+      });
+      const stats = calculateDetailedStats(filteredData);
+      renderTable(stats, showPercent);
     }
-  }
 
-  let showPercent = false;
-
-  async function updateDetailedStats() {
-    const selectedMonth = document.getElementById('month-select').value;
-    const [year, month] = selectedMonth.split('-').map(Number);
-
-    const combinedData = await fetchData();
-
-    const filtered = combinedData.filter(record => {
-      const dateStr = record.date?.split(' ')[0];
-      if (!dateStr) return false;
-
-      const date = new Date(dateStr);
-      return date.getFullYear() === year && (date.getMonth() + 1) === month;
+    const select = document.getElementById('month-select');
+    select.addEventListener('change', () => {
+      updateTableForMonth(select.value);
     });
 
-    const stats = calculateDetailedStats(filtered);
-    renderTable(stats, showPercent);
-  }
-
-  document.addEventListener('DOMContentLoaded', () => {
-    populateMonthSelect();
-    document.getElementById('month-select').addEventListener('change', updateDetailedStats);
-    document.getElementById('toggle-percent').addEventListener('click', () => {
+    const toggleBtn = document.getElementById('toggle-percent');
+    toggleBtn.addEventListener('click', () => {
       showPercent = !showPercent;
-      updateDetailedStats();
-      document.getElementById('toggle-percent').textContent = showPercent ? 'Показать абсолютные' : 'Показать %';
+      toggleBtn.textContent = showPercent ? 'Показать количество' : 'Показать %';
+      updateTableForMonth(select.value);
     });
 
-    updateDetailedStats();
-
-    setInterval(updateDetailedStats, 10000);
-  });
+    if (select.value) {
+      updateTableForMonth(select.value);
+    } else if (select.options.length > 0) {
+      select.selectedIndex = 0;
+      updateTableForMonth(select.options[0].value);
+    }
+  })();
 </script>
 </body>
 </html>
