--- a/index.html
+++ b/index.html
@@ -98,346 +98,242 @@
     </div>
   </div>
 
-  <div id="stats-container">
-    <!-- Таблица появится здесь -->
-  </div>
+  <div id="stats-container"></div>
 
-<script>
-  const apiKey = 'AIzaSyCP7tzYiGwIZ6cymLAlv_9QgPIEshnRgqI';
-  const sheetId = '10W03bvKlVFlIUcxsHkzP_v_13gtnYRBmnrrO0ujB1bU';
-  const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/`;
+  <script>
+    const apiKey = 'AIzaSyCP7tzYiGwIZ6cymLAlv_9QgPIEshnRgqI';
+    const sheetId = '10W03bvKlVFlIUcxsHkzP_v_13gtnYRBmnrrO0ujB1bU';
+    const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/`;
 
-  // Сопоставление кода к диагонали
-  const diagonalMap = {
-    '860': 86,
-    '850': 85,
-    '750': 75,
-    '700': 70,
-    '650': 65,
-    '580': 58,
-    '575': 58,
-    '550': 55,
-    '545': 55,
-    '500': 50,
-    '498': 50,
-    '495': 50,
-    '490': 50,
-    '438': 43,
-    '435': 43,
-    '430': 43,
-    '428': 43,
-    '425': 43,
-    '420': 43,
-    '418': 43,
-    '415': 43,
-    '398': 43,
-    '395': 43,
-    '390': 43,
-    '348': 32,
-    '345': 32,
-    '340': 32,
-    '328': 32,
-    '325': 32,
-    '320': 32,
-    '318': 32,
-    '315': 32,
-    '278': 27,
-    '275': 27,
-    '270': 27,
-    '248': 24,
-    '245': 24,
-    '240': 24,
-    '238': 24,
-    '235': 24,
-    '230': 24
-  };
+    const diagonalMap = {
+      '860': 86, '850': 85, '750': 75, '700': 70, '650': 65, '580': 58, '575': 58,
+      '550': 55, '545': 55, '500': 50, '498': 50, '495': 50, '490': 50,
+      '438': 43, '435': 43, '430': 43, '428': 43, '425': 43, '420': 43,
+      '418': 43, '415': 43, '398': 43, '395': 43, '390': 43,
+      '348': 32, '345': 32, '340': 32, '328': 32, '325': 32, '320': 32,
+      '318': 32, '315': 32,
+      '278': 27, '275': 27, '270': 27,
+      '248': 24, '245': 24, '240': 24, '238': 24, '235': 24, '230': 24
+    };
 
-  // Список допустимых префиксов (первая часть серийника)
-  // Могут быть любые буквы, поэтому не ограничиваем, просто проверяем 3 буквы в начале
-  function getDiagonal(serial) {
-    if (!serial || serial.length < 6) return null; // минимум 3 буквы + 3 цифры
-
-    // Проверим первые 3 символа — должны быть буквы
-    const prefix = serial.slice(0, 3);
-    if (!/^[A-Z]{3}$/i.test(prefix)) return null;
-
-    // После первых 3 букв идут 3 цифры — это код диагонали
-    const code = serial.slice(3, 6);
-    if (!/^\d{3}$/.test(code)) return null;
-
-    if (diagonalMap.hasOwnProperty(code)) {
-      return diagonalMap[code];
-    }
-    return null;
-  }
-
-  async function getData(sheetName) {
-    try {
-      const response = await fetch(`${sheetURL}${encodeURIComponent(sheetName)}?key=${apiKey}`);
-      const data = await response.json();
-      return data.values || [];
-    } catch (err) {
-      console.error('Ошибка получения данных:', err);
-      return [];
-    }
-  }
-
-  async function fetchData() {
-    const sheetNames = ['FI Station KOVALCHYK Y.', 'FI Station 2 ULANOVYCH.R'];
-    let combined = [];
-
-    for (const name of sheetNames) {
-      const sheetData = await getData(name);
-      if (sheetData.length < 2) continue;
-      const rows = sheetData.slice(1);
-      const mapped = rows.map(row => ({
-        date: row[0] || '',
-        serial: row[2] || '',
-        status: row[4] || '',
-        person: row[5] || ''
-      }));
-      combined = combined.concat(mapped);
-    }
-    return combined;
-  }
-
-  function calculateDetailedStats(data) {
-    const stats = {};
-
-    data.forEach(({ date, serial, status, person }) => {
-      const diagonal = getDiagonal(serial);
-      if (!diagonal) return;
-
-      if (!stats[person]) stats[person] = {};
-      if (!stats[person][diagonal]) stats[person][diagonal] = { OK: 0, NDF: 0, days: new Set() };
-
-      if (status === 'OK') stats[person][diagonal].OK++;
-      if (status === 'NDF') stats[person][diagonal].NDF++;
-
-      const day = date.split(' ')[0];
-      if (day) stats[person][diagonal].days.add(day);
-    });
-
-    return stats;
-  }
-
-  function renderTable(stats, showPercent = false) {
-    const container = document.getElementById('stats-container');
-    container.innerHTML = '';
-
-    const people = Object.keys(stats).sort();
-    if (people.length === 0) {
-      container.innerHTML = '<p style="text-align:center; margin-top:20px;">Нет данных для выбранного месяца</p>';
-      return;
+    function getDiagonal(serial) {
+      if (!serial || serial.length < 6) return null;
+      const match = serial.toUpperCase().match(/^[A-Z]{3}(\d{3})/);
+      if (!match) return null;
+      return diagonalMap[match[1]] || null;
     }
 
-    const table = document.createElement('table');
+    async function getData(sheetName) {
+      try {
+        const response = await fetch(`${sheetURL}${encodeURIComponent(sheetName)}?key=${apiKey}`);
+        const data = await response.json();
+        return data.values || [];
+      } catch (err) {
+        console.error('Ошибка получения данных:', err);
+        return [];
+      }
+    }
 
-    // Заголовок
-    const thead = document.createElement('thead');
-    const headerRow = document.createElement('tr');
+    async function fetchData() {
+      const sheetNames = ['FI Station KOVALCHYK Y.', 'FI Station 2 ULANOVYCH.R'];
+      let combined = [];
 
-    const thName = document.createElement('th');
-    thName.textContent = 'Name';
-    headerRow.appendChild(thName);
+      for (const name of sheetNames) {
+        const sheetData = await getData(name);
+        if (sheetData.length < 2) continue;
+        const rows = sheetData.slice(1);
+        const mapped = rows.map(row => ({
+          date: row[0] || '',
+          serial: row[2] || '',
+          status: row[4] || '',
+          person: row[5] || ''
+        }));
+        combined = combined.concat(mapped);
+      }
+      return combined;
+    }
 
-    diagonalsHeaders = Object.values(diagonalMap).filter((v, i, a) => a.indexOf(v) === i).sort((a,b) => b - a);
+    function calculateDetailedStats(data) {
+      const stats = {};
+      data.forEach(({ date, serial, status, person }) => {
+        const diagonal = getDiagonal(serial);
+        if (!diagonal) return;
 
-    // Используем отсортированный массив диагоналей из diagonalMap
-    diagonalsHeaders.forEach(d => {
-      const th = document.createElement('th');
-      th.textContent = d;
-      headerRow.appendChild(th);
-    });
+        if (!stats[person]) stats[person] = {};
+        if (!stats[person][diagonal]) stats[person][diagonal] = { sum: 0, days: new Set() };
 
-    // Новые столбцы: Day и % per month
-    const thDay = document.createElement('th');
-    thDay.textContent = 'Day';
-    headerRow.appendChild(thDay);
+        stats[person][diagonal].sum++;
+        const day = date.split(' ')[0];
+        if (day) stats[person][diagonal].days.add(day);
+      });
+      return stats;
+    }
 
-    const thPercentPerMonth = document.createElement('th');
-    thPercentPerMonth.textContent = '% per month';
-    headerRow.appendChild(thPercentPerMonth);
+    function renderTable(stats, showPercent = false) {
+      const container = document.getElementById('stats-container');
+      container.innerHTML = '';
 
-    // Итоговый столбец Total
-    const thTotalCol = document.createElement('th');
-    thTotalCol.textContent = 'Total';
-    thTotalCol.classList.add('total-col');
-    headerRow.appendChild(thTotalCol);
+      const diagonals = Array.from(new Set(
+        Object.values(stats).flatMap(p => Object.keys(p).map(Number))
+      )).sort((a, b) => b - a);
 
-    thead.appendChild(headerRow);
-    table.appendChild(thead);
+      const people = Object.keys(stats).sort();
+      if (people.length === 0) {
+        container.innerHTML = '<p style="text-align:center; margin-top:20px;">Нет данных для выбранного месяца</p>';
+        return;
+      }
 
-    // Подсчёт общей суммы по диагоналям
-    const totalPerDiagonal = {};
-    diagonalsHeaders.forEach(d => totalPerDiagonal[d] = 0);
+      const table = document.createElement('table');
+      const thead = document.createElement('thead');
+      const headerRow = document.createElement('tr');
 
-    // Создаем тело таблицы
-    const tbody = document.createElement('tbody');
+      const thName = document.createElement('th');
+      thName.textContent = 'Name';
+      headerRow.appendChild(thName);
 
-    people.forEach(person => {
-      const tr = document.createElement('tr');
-      const tdName = document.createElement('td');
-      tdName.textContent = person;
-      tr.appendChild(tdName);
-
-      let totalPersonSum = 0;
-      let totalDaysSet = new Set();
-
-      diagonalsHeaders.forEach(d => {
-        const td = document.createElement('td');
-        if (stats[person][d]) {
-          const s = stats[person][d];
-          const sumOKNDF = s.OK + s.NDF;
-          totalPersonSum += sumOKNDF;
-          totalPerDiagonal[d] += sumOKNDF;
-          s.days.forEach(day => totalDaysSet.add(day));
-
-          if (showPercent) {
-            const percent = totalPerDiagonal[d] ? ((sumOKNDF / totalPerDiagonal[d]) * 100).toFixed(1) : '0.0';
-            td.textContent = percent + '%';
-          } else {
-            td.textContent = sumOKNDF;
-          }
-        } else {
-          td.textContent = '-';
-        }
-        tr.appendChild(td);
+      diagonals.forEach(d => {
+        const th = document.createElement('th');
+        th.textContent = d;
+        headerRow.appendChild(th);
       });
 
-      // Столбец Day — количество уникальных дней
-      const tdDay = document.createElement('td');
-      tdDay.textContent = totalDaysSet.size;
-      tr.appendChild(tdDay);
+      headerRow.appendChild(Object.assign(document.createElement('th'), { textContent: 'Day' }));
+      headerRow.appendChild(Object.assign(document.createElement('th'), { textContent: '% per month' }));
+      headerRow.appendChild(Object.assign(document.createElement('th'), {
+        textContent: 'Total',
+        className: 'total-col'
+      }));
 
-      // Столбец % per month — отношение итога этого человека к общей сумме всех
-      const tdPercentPerMonth = document.createElement('td');
-      const totalAll = Object.values(stats).reduce((acc, personStats) => {
-        return acc + Object.values(personStats).reduce((acc2, diagStats) => acc2 + diagStats.OK + diagStats.NDF, 0);
-      }, 0);
-      tdPercentPerMonth.textContent = totalAll ? ((totalPersonSum / totalAll) * 100).toFixed(1) + '%' : '0.0%';
-      tr.appendChild(tdPercentPerMonth);
+      thead.appendChild(headerRow);
+      table.appendChild(thead);
 
-      // Итог (Total)
-      const tdTotal = document.createElement('td');
-      tdTotal.textContent = showPercent ? '' : totalPersonSum;
-      tdTotal.classList.add('total-col');
-      tdTotal.setAttribute('title', 'Total');
-      tr.appendChild(tdTotal);
+      const tbody = document.createElement('tbody');
 
-      tbody.appendChild(tr);
-    });
+      let globalTotal = 0;
+      const totalPerDiagonal = {};
+      diagonals.forEach(d => totalPerDiagonal[d] = 0);
 
-    table.appendChild(tbody);
+      const personTotals = {};
 
-    // Нижняя строка с суммами — Total Repaired
-    const tfoot = document.createElement('tfoot');
-    const footerRow = document.createElement('tr');
+      people.forEach(person => {
+        const tr = document.createElement('tr');
+        const tdName = document.createElement('td');
+        tdName.textContent = person;
+        tr.appendChild(tdName);
 
-    const footerNameCell = document.createElement('td');
-    footerNameCell.textContent = 'Total Repaired';
-    footerNameCell.style.textAlign = 'left';
-    footerRow.appendChild(footerNameCell);
+        let total = 0;
+        let days = new Set();
 
-    diagonalsHeaders.forEach(d => {
-      const td = document.createElement('td');
-      td.classList.add('total-col');
-      if (showPercent) {
-        td.textContent = '100%';
-      } else {
+        diagonals.forEach(d => {
+          const td = document.createElement('td');
+          if (stats[person][d]) {
+            const sum = stats[person][d].sum;
+            total += sum;
+            totalPerDiagonal[d] += sum;
+            stats[person][d].days.forEach(day => days.add(day));
+            td.textContent = sum;
+          } else {
+            td.textContent = '-';
+          }
+          tr.appendChild(td);
+        });
+
+        globalTotal += total;
+        personTotals[person] = total;
+
+        const tdDays = document.createElement('td');
+        tdDays.textContent = days.size;
+        tr.appendChild(tdDays);
+
+        const tdPercent = document.createElement('td');
+        tdPercent.textContent = globalTotal ? ((total / globalTotal) * 100).toFixed(1) + '%' : '0%';
+        tr.appendChild(tdPercent);
+
+        const tdTotal = document.createElement('td');
+        tdTotal.textContent = total;
+        tdTotal.classList.add('total-col');
+        tr.appendChild(tdTotal);
+
+        tbody.appendChild(tr);
+      });
+
+      table.appendChild(tbody);
+
+      const tfoot = document.createElement('tfoot');
+      const footerRow = document.createElement('tr');
+
+      const tdLabel = document.createElement('td');
+      tdLabel.textContent = 'Total Repaired';
+      footerRow.appendChild(tdLabel);
+
+      diagonals.forEach(d => {
+        const td = document.createElement('td');
         td.textContent = totalPerDiagonal[d];
-      }
-      footerRow.appendChild(td);
-    });
+        td.classList.add('total-col');
+        footerRow.appendChild(td);
+      });
 
-    // Пустые ячейки для Day и % per month
-    const tdEmptyDay = document.createElement('td');
-    tdEmptyDay.classList.add('total-col');
-    footerRow.appendChild(tdEmptyDay);
+      const tdEmptyDay = document.createElement('td');
+      const tdEmptyPercent = document.createElement('td');
+      tdEmptyDay.textContent = '';
+      tdEmptyPercent.textContent = '';
+      footerRow.appendChild(tdEmptyDay);
+      footerRow.appendChild(tdEmptyPercent);
 
-    const tdEmptyPercent = document.createElement('td');
-    tdEmptyPercent.classList.add('total-col');
-    footerRow.appendChild(tdEmptyPercent);
+      const tdTotalAll = document.createElement('td');
+      tdTotalAll.textContent = globalTotal;
+      tdTotalAll.classList.add('total-col');
+      footerRow.appendChild(tdTotalAll);
 
-    // Общая сумма всех диагоналей в последней ячейке
-    const tdGrandTotal = document.createElement('td');
-    tdGrandTotal.classList.add('total-col');
-    if (showPercent) {
-      tdGrandTotal.textContent = '';
-    } else {
-      const grandTotal = Object.values(totalPerDiagonal).reduce((a, b) => a + b, 0);
-      tdGrandTotal.textContent = grandTotal;
+      tfoot.appendChild(footerRow);
+      table.appendChild(tfoot);
+
+      container.appendChild(table);
     }
-    footerRow.appendChild(tdGrandTotal);
 
-    tfoot.appendChild(footerRow);
-    table.appendChild(tfoot);
+    function populateMonthSelect() {
+      const select = document.getElementById('month-select');
+      const now = new Date();
 
-    container.appendChild(table);
-  }
-
-  function updateMonthOptions(data) {
-    const select = document.getElementById('month-select');
-    const months = new Set();
-
-    data.forEach(row => {
-      if (row.date) {
-        const date = new Date(row.date);
-        if (!isNaN(date)) {
-          const key = `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, '0')}`;
-          months.add(key);
-        }
+      for (let i = 0; i < 12; i++) {
+        const date = new Date(now.getFullYear(), now.getMonth() - i, 1);
+        const value = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}`;
+        const label = date.toLocaleDateString('pl-PL', { month: 'long', year: 'numeric' });
+        const option = new Option(label.charAt(0).toUpperCase() + label.slice(1), value);
+        select.appendChild(option);
       }
-    });
-
-    const sortedMonths = Array.from(months).sort().reverse();
-    select.innerHTML = '';
-    sortedMonths.forEach(month => {
-      const option = document.createElement('option');
-      option.value = month;
-      option.textContent = month;
-      select.appendChild(option);
-    });
-  }
-
-  (async function initialize() {
-    const allData = await fetchData();
-    updateMonthOptions(allData);
+    }
 
     let showPercent = false;
 
-    function updateTableForMonth(month) {
-      const filteredData = allData.filter(row => {
-        if (row.date) {
-          const date = new Date(row.date);
-          const key = `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, '0')}`;
-          return key === month;
-        }
-        return false;
+    async function updateDetailedStats() {
+      const selectedMonth = document.getElementById('month-select').value;
+      const [year, month] = selectedMonth.split('-').map(Number);
+
+      const combinedData = await fetchData();
+
+      const filtered = combinedData.filter(record => {
+        const dateStr = record.date?.split(' ')[0];
+        if (!dateStr) return false;
+        const date = new Date(dateStr);
+        return date.getFullYear() === year && (date.getMonth() + 1) === month;
       });
-      const stats = calculateDetailedStats(filteredData);
+
+      const stats = calculateDetailedStats(filtered);
       renderTable(stats, showPercent);
     }
 
-    const select = document.getElementById('month-select');
-    select.addEventListener('change', () => {
-      updateTableForMonth(select.value);
+    document.addEventListener('DOMContentLoaded', () => {
+      populateMonthSelect();
+      document.getElementById('month-select').addEventListener('change', updateDetailedStats);
+      document.getElementById('toggle-percent').addEventListener('click', () => {
+        showPercent = !showPercent;
+        updateDetailedStats();
+        document.getElementById('toggle-percent').textContent = showPercent ? 'Показать абсолютные' : 'Показать %';
+      });
+      updateDetailedStats();
+      setInterval(updateDetailedStats, 10000);
     });
-
-    const toggleBtn = document.getElementById('toggle-percent');
-    toggleBtn.addEventListener('click', () => {
-      showPercent = !showPercent;
-      toggleBtn.textContent = showPercent ? 'Показать количество' : 'Показать %';
-      updateTableForMonth(select.value);
-    });
-
-    if (select.value) {
-      updateTableForMonth(select.value);
-    } else if (select.options.length > 0) {
-      select.selectedIndex = 0;
-      updateTableForMonth(select.options[0].value);
-    }
-  })();
-</script>
+  </script>
 </body>
 </html>
